<resources>
    <string name="app_name"> </string>
    <string name="iamgeView">logo</string>
    <string name="btn_welLog">Login</string>
    <string name="btn_welSignup">Sign Up</string>
    <string name="edt_logUname">Username</string>
    <string name="edt_logLogin">Password</string>
    <string name="textView">Forget Password?</string>
    <string name="btn_logLogin">Login</string>
    <string name="textView2">You don\'t have an account?</string>
    <string name="textView3">Register.</string>
    <string name="imageView2">logo</string>
    <string name="reg_imgview">logo</string>
    <string name="reg_imgBrowse">img_browse</string>
    <string name="reg_edtFn">Name</string>
    <string name="reg_edtMi">Middle Initial</string>
    <string name="reg_edtLn">Surname</string>
    <string name="reg_edtNum">Contact Number</string>
    <string name="reg_edtAdres">Home Address</string>
    <string name="reg_edtBday">Birth Date</string>
    <string name="reg_edtUname">Username</string>
    <string name="reg_edtPword">Password</string>
    <string name="reg_edtEml">Email Address</string>
    <string name="reg_btnDone">Done</string>
    <string name="texView4">LMT Registration</string>


    <string name="draw_img4" />
    <string name="drawer_txt1">Users Name</string>
    <string name="draw_edtIinfo" />
    <string name="General_ttl">General</string>
    <string name="Commu_ttl">Communicate</string>
    <string name="menu_item1">Dashboard</string>
    <string name="menu_item2">Rate Us</string>
    <string name="menu_item3">Share Link</string>
    <string name="menu_item4">Send</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="img_vCs">iimage</string>
    <string name="txt_name">text name</string>
    <string name="txt_numvWing">num</string>
    <string name="imageView4">credlogo</string>
    <string name="imageView5">deblogo</string>
    <string name="textview5">TOP :</string>

    <string name="img_fltbtn" />
    <string name="edt_search">Number Id,First name , Surname ....</string>
    <string name="credadd_edtSearch">Already have an Account? Enter your code here.</string>
    <string name="textView6">Already have an account?</string>
    <string name="cred_code">Enter code.</string>
    <string name="cred_btnCheck">Check code</string>
    <string name="cred_btnClose">Close</string>
    <string name="imagess">images</string>
    <string name="code_edt">Enter Code</string>
    <string name="code_btnOk">OK</string>
    <string name="deb_fn">Fullname</string>
    <string name="deb_cpnum">Contact Number</string>
    <string name="deb_emls">Email Address</string>
    <string name="deb_adrs">Home Address</string>
    <string name="proc_loan_edtDate">Date</string>
    <string name="txt_row1">sdadad</string>
    <string name="txt_row2">sdasdasd</string>
    <string name="txt_row3">asdasd</string>
    <string name="txt_row4">asdasdasd</string>
    <string name="proc_loan_edtInt">Interest</string>
    <string name="proc_loan_edtPrinAmount">Principal Amount</string>
    <string name="proc_loan_edtTerm">Terms</string>
    <string name="proc_loan_edtPeriod">No. of Period</string>
    <string name="titleRow_1">No. of Periods</string>
    <string name="txtRow2">Payment</string>
    <string name="txtRow3">Principal Paid</string>
    <string name="txtRow4">Interest Paid</string>
    <string name="txtBalance">Balance</string>
    <string name="txt_row5">asdasdasd</string>
    <string name="btn_process">Breakdown</string>
    <string name="btn_reset">Reset</string>
    <string name="btn_saveProcess">Process</string>
    <string name="drawer_txt2">number</string>
    <string name="image">image</string>
    <string name="textView8">Name</string>
    <string name="textView9">Address</string>
    <string name="textView10">Contact# :</string>
    <string name="textView11">addressholder</string>
    <string name="textView12">contactholder</string>
    <string name="textView13">"PRINCIPAL AMOUNT : "</string>
    <string name="textView14" />
    <string name="textview15">ANNUAL INTEREST RATE :</string>
    <string name="textview">TERM / PAYMENT METHOD :</string>
    <string name="textview19">BALANCE :</string>
    <string name="textview21">No. of Periods</string>
    <string name="textView22">Payment</string>
    <string name="textview23">Principal Amount</string>
    <string name="textview24">Interest</string>
    <string name="textView25">Balance</string>
    <string name="textView26">Status</string>
    <string name="btn_pay">Pay</string>
    <string name="edt_dialogAmout">Payment Amout</string>
    <string name="edt_dialogDate">"Date "</string>
    <string name="img_dialogReciept">Dialog Image</string>
    <string name="btn_dialogPay">Pay</string>
    <string name="img_debhist">History</string>

</resources>