<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/General_ttl"
        android:visible="true"
        
        >
        <menu>
            <item
                android:id="@+id/home"
                android:icon="@drawable/ic_baseline_home_24"
                android:title="@string/menu_item1" />
            <item
                android:id="@+id/another"
                android:icon="@drawable/ic_baseline_star_rate_24"
                android:title="@string/menu_item2" />
        </menu>
    </item>

    <item
        android:title="@string/Commu_ttl"
        android:visible="true">
        <menu>
            <item
                android:id="@+id/home1"
                android:icon="@drawable/ic_baseline_share_24"
                android:title="@string/menu_item3" />
            <item
                android:id="@+id/another1"
                android:icon="@drawable/ic_baseline_home_24"

                android:title="@string/menu_item4" />
        </menu>
    </item>
</menu>