<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/list_table"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        app:contentPadding="6dp"
        android:layout_margin="3dp"
        android:focusable="true"
        android:scrollbars="vertical">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">
        <TextView
            android:id="@+id/txt_row1"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:text="@string/txt_row1" />

        <TextView
            android:id="@+id/txt_row2"
            android:layout_width="82dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_row2"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/txt_row3"
            android:layout_width="82dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:text="@string/txt_row3" />

        <TextView
            android:id="@+id/txt_row4"
            android:layout_width="82dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:text="@string/txt_row4" />

    <TextView
        android:id="@+id/txt_row5"
        android:layout_width="82dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:text="@string/txt_row5" />
</LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>