<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/dialog_relView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerInParent="true"
        tools:ignore="UselessParent">

        <EditText
            android:id="@+id/edt_dialogAmout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_dialogReciept"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:hint="@string/edt_dialogAmout"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edt_dialogDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_dialogAmout"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:hint="@string/edt_dialogDate"
            android:focusable="false"
            android:clickable="false"
            android:cursorVisible="false"
            android:importantForAutofill="no"
            android:inputType="date" />

        <ImageView
            android:id="@+id/img_dialogReciept"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"

            android:background="@drawable/ic_baseline_add_photo_alternate_24"
            android:contentDescription="@string/img_dialogReciept" />

        <Button
            android:id="@+id/btn_dialogPay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_dialogDate"
            android:layout_centerHorizontal="true"
            android:text="@string/btn_dialogPay" />
    </RelativeLayout>
</RelativeLayout>